perf: Optimize scalar fast path for nanvl

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -134,6 +134,11 @@ required-features = ["math_expressions"]
 
 [[bench]]
 harness = false
+name = "nanvl"
+required-features = ["math_expressions"]
+
+[[bench]]
+harness = false
 name = "uuid"
 required-features = ["string_expressions"]
 
