fix: Include extended.yml and Cargo.toml in workflow trigger paths

--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -45,6 +45,8 @@ on:
       - 'datafusion/expr*/**/*.rs'
       - 'datafusion/optimizer/**/*.rs'
       - 'datafusion-testing'
+      - '.github/workflows/extended.yml'
+      - 'Cargo.toml'
   workflow_dispatch:
     inputs:
       pr_number:
