feat: update release profile settings in Cargo.toml
- Set incremental to false for release-nonlto profile
- Upgrade optimization level to 3
- Retain debug information for flamegraphs by setting strip to false

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -249,13 +249,13 @@ strip = true      # Eliminate debug information to minimize binary size
 [profile.release-nonlto]
 codegen-units = 16
 debug-assertions = false
-debug = false
-incremental = true
+incremental = false
 inherits = "release"
 lto = false
-opt-level = 2
+opt-level = 3
 overflow-checks = false
 rpath = false
+strip = false            # Retain debug info for flamegraphs
 
 [profile.ci]
 debug = false
