--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -169,16 +169,34 @@ jobs:
           rust-version: stable
       - name: Build sqllogictest binary
         run: |
-          TEST_BIN=$(cargo test --features backtrace,parquet_encryption --profile release-nonlto --test sqllogictests --no-run --message-format=json | sed -n 's/.*"executable":"\([^"]*\)".*/\1/p' | head -n 1)
+          # Cargo emits test binaries with hashed filenames under target/.../deps.
+          TEST_BIN=$(cargo build --profile release-nonlto --features backtrace,parquet_encryption --package datafusion-sqllogictest --test sqllogictests --message-format=json | python - <<'PY'
+import json
+import sys
+
+for line in sys.stdin:
+    try:
+        payload = json.loads(line)
+    except json.JSONDecodeError:
+        continue
+    if payload.get("reason") != "compiler-artifact":
+        continue
+    target = payload.get("target") or {}
+    if target.get("name") == "sqllogictests" and "test" in target.get("kind", []):
+        executable = payload.get("executable")
+        if executable:
+            print(executable)
+            break
+PY
+          )
           if [ -z "$TEST_BIN" ]; then
             echo "Could not find sqllogictests test binary"
             exit 1
           fi
           echo "TEST_BIN=$TEST_BIN" >> "$GITHUB_ENV"
       - name: Run sqllogictest
+        working-directory: datafusion/sqllogictest
         run: |
-          (
-            cd datafusion/sqllogictest
-            "$TEST_BIN" --include-sqlite
-          )
+          # sqllogictests expects crate-relative paths for test data.
+          "$TEST_BIN" --include-sqlite
           cargo clean
