--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -170,25 +170,8 @@ jobs:
       - name: Build sqllogictest binary
         run: |
           # Cargo emits test binaries with hashed filenames under target/.../deps.
-          TEST_BIN=$(cargo build --profile release-nonlto --features backtrace,parquet_encryption --package datafusion-sqllogictest --test sqllogictests --message-format=json | python - <<'PY'
-import json
-import sys
-
-for line in sys.stdin:
-    try:
-        payload = json.loads(line)
-    except json.JSONDecodeError:
-        continue
-    if payload.get("reason") != "compiler-artifact":
-        continue
-    target = payload.get("target") or {}
-    if target.get("name") == "sqllogictests" and "test" in target.get("kind", []):
-        executable = payload.get("executable")
-        if executable:
-            print(executable)
-            break
-PY
-          )
+          # We use head to pick the first matching sqllogictests artifact from the JSON stream.
+          TEST_BIN=$(cargo build --profile release-nonlto --features backtrace,parquet_encryption --package datafusion-sqllogictest --test sqllogictests --message-format=json | sed -n 's/.*"executable":"\([^"]*\)".*/\1/p' | head -n 1)
           if [ -z "$TEST_BIN" ]; then
             echo "Could not find sqllogictests test binary"
             exit 1
