--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -188,6 +188,11 @@ required-features = ["math_expressions"]
 
 [[bench]]
 harness = false
+name = "atan2"
+required-features = ["math_expressions"]
+
+[[bench]]
+harness = false
 name = "substr_index"
 required-features = ["unicode_expressions"]
 
