Further improvements of the extension type API proposal

--- a/datafusion/common/Cargo.toml
+++ b/datafusion/common/Cargo.toml
@@ -66,6 +66,7 @@ apache-avro = { workspace = true, features = [
     "zstandard",
 ], optional = true }
 arrow = { workspace = true }
+arrow-schema = { workspace = true, features = ["canonical_extension_types"] }
 arrow-ipc = { workspace = true }
 chrono = { workspace = true }
 half = { workspace = true }
