fix: address reviewer comments - unnecessary qualification, depcheck Cargo.toml, substrait needless_pass_by_value, cli revert non-Arc clone

--- a/dev/depcheck/Cargo.toml
+++ b/dev/depcheck/Cargo.toml
@@ -20,7 +20,10 @@
 name = "depcheck"
 edition = "2024"
 
-[lints]\nworkspace = true\n\n# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lints]
+workspace = true
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cargo = "0.92.0"
