--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -45,14 +45,20 @@ updates:
         patterns:
           - "prost*"
           - "pbjson*"
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
-    labels: [auto-dependencies]
-  - package-ecosystem: "pip"
-    directory: "/docs"
-    schedule:
-      interval: "weekly"
-    labels: [auto-dependencies]
+
+        # Catch-all: group only minor/patch into a single PR,
+        # excluding deps we want always separate (and excluding arrow/parquet which have their own group)
+      all-other-cargo-deps:
+        applies-to: version-updates
+        patterns:
+          - "*"
+        exclude-patterns:
+          - "arrow*"
+          - "parquet"
+          - "object_store"
+          - "sqlparser"
+          - "prost*"
+          - "pbjson*"
+        update-types:
+          - "minor"
+          - "patch"
